fix: image not scale properly on mobile view

--- a/css/about.css
+++ b/css/about.css
@@ -4,6 +4,3 @@
     margin: 3vh;
 }
 
-main{
-    margin: 5vh;
-}
