--- a/css/travel.css
+++ b/css/travel.css
@@ -8,5 +8,6 @@
     border-radius: 1vw;
     border: 1vw solid #36a66863;
     margin: 10px 10px 10px 10px;
-    width: 300px;
+    width: 100%;
+    height: auto;
   }
